syntax = "proto3";

option go_package = ".;loginAndRegister";
option java_package = "io.grpc.examples";

package loginAndRegister;

// The greeter service definition.
service Test {
  // Sends a greeting
  rpc Login (LoginRequest) returns (LoginReply) {}
  rpc Register (RegisterRequest) returns (RegisterReply) {}
}

// The request message containing the user's name.
message LoginRequest {
  string name = 1;
  string password = 2;
}

// The response message containing the greetings
message LoginReply {
  int32 state = 1;
  string id = 2;
}


// The request message containing the user's name.
message RegisterRequest {
  userDetail detail = 1;
}

// The response message containing the greetings
message RegisterReply {
  int32 state = 1;
}

message userDetail {
  string account = 1;
  string password = 2;
  int32 age = 3;
  int64 id = 4;
}